tdf#124500: convert short path names from drag-n-drop to long names

... otherwise link URLs with short names like 2E23~1.PNG would be
inaccessible from the network, or after copy to a different directory
or system, where the autogenerated short name might be different.

Change-Id: Ice0b2fa205a25aba232e960cad2615a527cba05a